Adding comments, improving clean

--- a/it_s_the_little_details_that_are_vital_little_things_make_big_things_happen/Makefile
+++ b/it_s_the_little_details_that_are_vital_little_things_make_big_things_happen/Makefile
@@ -1,12 +1,18 @@
+# * ===========================================================	*
+# *  Project of introduction to Makefile by Alexandre Gautier 	*
+# *  This Makefile builds your libholbertonschool.a library.	*
+# *  by Alexandro de Oliveira, for Holberton School.		*			 
+# * =========================================================== *
+
 CC := gcc
 INCLUDE := inc/
 CFLAGS := -Wall -pedantic -Werror -Wextra -I$(INCLUDE).
 SOURCE := src/
-OBJ := 0-absolute.c 0-uppercase_string.c 1-swap_int.c 2-str_len.c 4-positive_or_not.c  5-reverse_array.c 0-contact_strings.c 1-cap_string.c 1-uppercase.c  3-is_prime_number.c  4-reverse_string.c   print_array.c 0-first_digit.c 1-nconcat_strings.c  2-square_root.c 3-print_string.c  4-strings_compare.c  string_to_integer.c 0-lowercase.c 1-power.c 2-string_copy.c  3-string_ncopy.c 5-print_number.c
+OBJ := 0-absolute.c 0-uppercase_string.c 1-swap_int.c 2-str_len.c 4-positive_or_not.c  5-reverse_array.c 0-contact_strings.c 1-cap_string.c 1-uppercase.c  3-is_prime_number.c  4-reverse_string.c   print_array.c  0-first_digit.c 1-nconcat_strings.c  2-square_root.c 3-print_string.c  4-strings_compare.c  string_to_integer.c 0-lowercase.c 1-power.c 2-string_copy.c  3-string_ncopy.c 5-print_number.c
 SRC := $(foreach file, $(OBJ), $(SOURCE)$(file)) 
 OBJS := $(patsubst %.c, %.o, $(SRC))
 
-all: libholbertonschool.a
+all: libholbertonschool.a clean
 
 libholbertonschool.a: $(OBJS)
 	@echo "============="
@@ -18,9 +24,11 @@ $(SOURCE)%.o:$(SOURCE)%.c
 	@echo Compiling the source code.
 	$(CC) $(CFLAGS) -c $< -o $@
 
-$(phony clean): 
+.PHONY: clean
+
+clean: 
 	@echo Removing object files *.o
-	rm -rf $(SOURCE)*.o
+	rm -f src/*.o
 re:
 	@echo "============="
 	@echo Applying the "re" rule.
