--- a/it_s_the_little_details_that_are_vital_little_things_make_big_things_happen/Makefile
+++ b/it_s_the_little_details_that_are_vital_little_things_make_big_things_happen/Makefile
@@ -1,6 +1,6 @@
 # * ===========================================================	*
 # *  Project of introduction to Makefile by Alexandre Gautier 	*
-# *  This Makefile builds your libholbertonschool.a library.	*
+# *  This Makefile builds our libholbertonschool.a library.	*
 # *  by Alexandro de Oliveira, for Holberton School.		*			 
 # * =========================================================== *
 
