Adding feature to find all files in the src dir

--- a/it_s_the_little_details_that_are_vital_little_things_make_big_things_happen/Makefile
+++ b/it_s_the_little_details_that_are_vital_little_things_make_big_things_happen/Makefile
@@ -8,9 +8,8 @@ CC := gcc
 INCLUDE := inc/
 CFLAGS := -Wall -pedantic -Werror -Wextra -I$(INCLUDE).
 SOURCE := src/
-OBJ := 0-absolute.c 0-uppercase_string.c 1-swap_int.c 2-str_len.c 4-positive_or_not.c  5-reverse_array.c 0-contact_strings.c 1-cap_string.c 1-uppercase.c  3-is_prime_number.c  4-reverse_string.c   print_array.c  0-first_digit.c 1-nconcat_strings.c  2-square_root.c 3-print_string.c  4-strings_compare.c  string_to_integer.c 0-lowercase.c 1-power.c 2-string_copy.c  3-string_ncopy.c 5-print_number.c
-SRC := $(foreach file, $(OBJ), $(SOURCE)$(file)) 
-OBJS := $(patsubst %.c, %.o, $(SRC))
+SRC := $(shell find $(SOURCE) -name '*.c')
+OBJ := $(patsubst %.c, %.o, $(SRC))
 
 .PHONY: all
 
@@ -20,11 +19,11 @@ all: libholbertonschool.a clean
 	@echo " * Holberton School, the best Software Engineer School EVER ! ! ! *"
 	@echo " *	*	*	*	*	*	*	*	 *"
 	@echo " * ============================================================== *"
-libholbertonschool.a: $(OBJS)
+libholbertonschool.a: $(OBJ)
 	@echo " * ============================================================== *"
 	@echo " * 		   Creating the library.			 *"
 	@echo " * ============================================================== *"
-	ar -rcs libholbertonschool.a $(OBJS)
+	ar -rcs libholbertonschool.a $(OBJ)
 
 $(SOURCE)%.o:$(SOURCE)%.c
 	@echo " * ============================================================== *"
