--- a/mistakes_are_always_forgivable_if_one_has_the_courage_to_admit_them/2-calculator/Makefile
+++ b/mistakes_are_always_forgivable_if_one_has_the_courage_to_admit_them/2-calculator/Makefile
@@ -1,3 +1,7 @@
+# * =========================================================== *
+# *  Makefile for the 2-calculator task, by Alexandre Gautier   *
+# *  by Alexandro de Oliveira, for Holberton School.            *
+# * =========================================================== *
 CC	:= gcc
 CFLAGS	:= -Wall -Werror -Wextra -pedantic
 SRC	:= $(shell find . -name '*.c')
