--- a/mistakes_are_always_forgivable_if_one_has_the_courage_to_admit_them/2-calculator/Makefile
+++ b/mistakes_are_always_forgivable_if_one_has_the_courage_to_admit_them/2-calculator/Makefile
@@ -8,7 +8,7 @@ SRC	:= $(shell find . -name '*.c')
 OBJECT	:= $(SRC:.c=.o)
 
 all: 2-calculator 
-	@echo Done ! ! !
+	@echo BOOOMMMM ! ! !
 	@echo Congrats ! ! !
 
 2-calculator: $(OBJECT)
