--- a/mistakes_are_always_forgivable_if_one_has_the_courage_to_admit_them/2-calculator/Makefile
+++ b/mistakes_are_always_forgivable_if_one_has_the_courage_to_admit_them/2-calculator/Makefile
@@ -2,22 +2,21 @@
 # *  Makefile for the 2-calculator task, by Alexandre Gautier   *
 # *  by Alexandro de Oliveira, for Holberton School.            *
 # * =========================================================== *
-CC	:= gcc
+CC	:= @gcc
 CFLAGS	:= -Wall -Werror -Wextra -pedantic
-SRC	:= $(shell find . -name '*.c')
-OBJECT	:= $(SRC:.c=.o)
+SRC	:= $(shell find . -name '*.c') # Create the list of source code files using "find".
+OBJECTS	:= $(SRC:.c=.o) # Substitute the source file extension for object extension.
 
 all: 2-calculator 
 	@echo BOOOMMMM ! ! !
 	@echo Congrats ! ! !
 
-2-calculator: $(OBJECT)
-	$(CC) $(OBJECT) -o 2-calculator
+2-calculator: $(OBJECTS) # To create the executable the Objects are required.
 	@echo Creating the executable file: $@
 
-$(OBJECT): $(SRC)
-
+$(OBJECTS): $(SRC)
+	@echo Creating the $@ object file...
 clean:
-	rm -f $(OBJECT)
+	rm -f $(OBJECTS)
 
-re: $(OBJECT)
+re: $(OBJECTS)
