Fixing concept about implicit rules

--- a/mistakes_are_always_forgivable_if_one_has_the_courage_to_admit_them/2-calculator/Makefile
+++ b/mistakes_are_always_forgivable_if_one_has_the_courage_to_admit_them/2-calculator/Makefile
@@ -2,7 +2,7 @@
 # *  Makefile for the 2-calculator task, by Alexandre Gautier   *
 # *  by Alexandro de Oliveira, for Holberton School.            *
 # * =========================================================== *
-CC	:= @gcc
+CC	:= gcc
 CFLAGS	:= -Wall -Werror -Wextra -pedantic
 SRC	:= $(shell find . -name '*.c') # Create the list of source code files using "find".
 OBJECTS	:= $(SRC:.c=.o) # Substitute the source file extension for object extension.
@@ -11,12 +11,13 @@ all: 2-calculator
 	@echo BOOOMMMM ! ! !
 	@echo Congrats ! ! !
 
-2-calculator: $(OBJECTS) # To create the executable the Objects are required. Using implicit rules.
+2-calculator: $(OBJECTS) # To create the executable the Objects are required.
 	@echo Creating the executable file: $@
+	$(CC) $(OBJECTS) -o 2-calculator
 
 $(OBJECTS): $(SRC) # Using GNU-make implicit rules
-	@echo Creating the $@ object file...
+
 clean:
-	rm -f $(OBJECTS)
+	rm -f $(OBJECTS) 2-calculator
 
 re: $(OBJECTS)
