Tweaking the output messages

--- a/it_s_the_little_details_that_are_vital_little_things_make_big_things_happen/Makefile
+++ b/it_s_the_little_details_that_are_vital_little_things_make_big_things_happen/Makefile
@@ -21,7 +21,8 @@ libholbertonschool.a: $(OBJECTS)
 	@echo " * =============================================================== *"
 	@echo " * 		Creating the library...				  *"
 	@ar -rcs libholbertonschool.a $(OBJECTS)
-	@echo " * 		Done ! ! !					  *"
+	@echo " * 		BOOOMMMM ! ! !					  *"
+	@echo " *		CONGRATS ! ! !					  *"
 	@echo " * =============================================================== *"
 
 $(OBJECTS):$(SRC)
