--- a/macros_and_structures/task1/Makefile
+++ b/macros_and_structures/task1/Makefile
@@ -3,8 +3,8 @@
 # *  by Alexandro de Oliveira, for Holberton School.		*
 # * =========================================================== *
 CC	:= gcc
-CFLAGS	:= -Wall -Wextra -Werror -pedantic
-SRC	:= 1-main.c 1-print_string_struct.c 1-string_to_struct.c 3-free_string_struct.c print_char.c
+CFLAGS	:= -Wall -Wextra -Werror -pedantic -I ../
+SRC	:= 1-main.c 1-print_string_struct.c 1-string_to_struct.c 1-free_string_struct.c print_char.c
 OBJECTS	:= $(SRC:.c=.o)
 
 all: task-1
