Fixing Makefile to compile just updated files

--- a/simple_shell/Makefile
+++ b/simple_shell/Makefile
@@ -4,17 +4,13 @@
 # * =================================================== *
 CC	:= gcc
 CFLAGS	:= -Wall -Wextra -Werror -pedantic
-SRC	:= main.c print.c print_char.c
+SRC	:= main.c print.c strings.c print_char.c
 OBJECTS	:= $(SRC:.c=.o)
 TARGET	:= shellisfun
 LIB	:= libshell.a
 
-all: $(TARGET)
-
 $(TARGET): $(OBJECTS)
 	$(CC) $(OBJECTS) $(LIB) -o $(TARGET)
-
-$(OBJECTS): $(SRC)
 
 clean:
 	rm -f $(OBJECTS) $(TARGET)
