Fixing 're' rule

--- a/it_s_the_little_details_that_are_vital_little_things_make_big_things_happen/Makefile
+++ b/it_s_the_little_details_that_are_vital_little_things_make_big_things_happen/Makefile
@@ -31,12 +31,13 @@ $(OBJECTS):$(SRC)
 
 clean: 
 	@echo " * ============================================================== *"
-	@echo " * 		Removing object files				 *"
+	@echo " * 		Removing object and backup file			 *"
 	@rm -f $(OBJECTS)
+	@rm -f *~
 	@echo " * 		Directory $(SOURCE) is clean now!		 *"
 	@echo " * ============================================================== *"
 
-re: $(OBJECTS)
+re: clean all 
 	@echo " * ============================================================== *"
 	@echo " * 		Applying the "re" rule.				 *"
 	@echo " * ============================================================== *"
